basic button states working

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <button id="play-button" class="default">
-      <i class="icon icon-play"></i>
-      <span class="label">Preview</span>
+      <icon class="icon-play"></icon>
+      <label>Preview</label>
     </button>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
