mostly working, multiple tracks
Former-commit-id: bd411cd13006efd57e00d69ec337dc916c6e8377

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
   </head>
   <body>
-    <button id="play-button" class="default">
-      <icon class="icon-play"></icon>
-      <label>Preview</label>
-    </button>
+    <div class="song">
+      <h3>Before the Fall</h3>
+      <button class="default" data-audio-src="music/before-the-fall.wav">
+        <icon class="icon-play"></icon>
+        <label>Preview</label>
+      </button>
+    </div>
+
+    <div class="song">
+      <h3>Red Earth</h3>
+      <button class="default" data-audio-src="music/red-earth.wav">
+        <icon class="icon-play"></icon>
+        <label>Preview</label>
+      </button>
+    </div>
+
+    <div class="song">
+      <h3>Tidal</h3>
+      <button class="default" data-audio-src="music/tidal.wav">
+        <icon class="icon-play"></icon>
+        <label>Preview</label>
+      </button>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
