--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
   <body>
     <div class="song">
       <h3>Before the Fall</h3>
-      <button class="default" data-audio-src="music/before-the-fall.wav">
+      <button class="default">
         <icon class="icon-play"></icon>
         <label>Preview</label>
       </button>
+      <audio loop="loop" preload="auto" src="music/before-the-fall.wav" />
     </div>
 
     <div class="song">
       <h3>Red Earth</h3>
-      <button class="default" data-audio-src="music/red-earth.wav">
+      <button class="default">
         <icon class="icon-play"></icon>
         <label>Preview</label>
       </button>
+      <audio loop="loop" preload="auto" src="music/red-earth.wav" />
     </div>
 
     <div class="song">
       <h3>Tidal</h3>
-      <button class="default" data-audio-src="music/tidal.wav">
+      <button class="default">
         <icon class="icon-play"></icon>
         <label>Preview</label>
       </button>
+      <audio loop="loop" preload="auto" src="music/tidal.wav" />
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
