add loading state, don’t preload everything
Former-commit-id: 2085109278522eb9c47e05f6efb6c4aa862b22af

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <icon class="icon-play"></icon>
         <label>Preview</label>
       </button>
-      <audio loop="loop" preload="auto" src="music/before-the-fall.wav" />
+      <audio loop="loop" preload="none" src="music/before-the-fall.wav" />
     </div>
 
     <div class="song">
@@ -23,7 +23,7 @@
         <icon class="icon-play"></icon>
         <label>Preview</label>
       </button>
-      <audio loop="loop" preload="auto" src="music/red-earth.wav" />
+      <audio loop="loop" preload="none" src="music/red-earth.wav" />
     </div>
 
     <div class="song">
@@ -32,7 +32,7 @@
         <icon class="icon-play"></icon>
         <label>Preview</label>
       </button>
-      <audio loop="loop" preload="auto" src="music/tidal.wav" />
+      <audio loop="loop" preload="none" src="music/tidal.wav" />
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
