change to a shorter song
Former-commit-id: 5f2e382244d85f78cf850d819a68540b6a53af6d

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="song">
-      <h3>Before the Fall</h3>
+      <h3>Whale in the Desert</h3>
       <button class="default">
         <icon class="icon-play"></icon>
         <label>Preview</label>
       </button>
-      <audio loop="loop" preload="none" src="music/before-the-fall.wav" />
+      <audio loop="loop" preload="none" src="music/whale-in-the-desert.wav" />
     </div>
 
     <div class="song">
